# BS-Praktikum-22

./: .gitignore  CMakeLists.txt  keyValStore.c  keyValStore.h  main.c  main.h  semaphore.c  semaphore.h  server.c  server.h  splitCommand.c  splitCommand.h  sub.c  sub.h
